# medcoupling

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  MEDCouplingConfig.cmake.in  MEDCoupling_version.h.in  MEDtool_version.h.in  README.md  conanfile.py  pyproject.toml
adm_local/cmake_files/: CMakeLists.txt
adm_local_without_kernel/: CMakeLists.txt
cmake_files/: CMakeLists.txt  FindCppUnit.cmake  FindGraphviz.cmake  FindMEDFile.cmake  FindMetis.cmake  FindParMetis.cmake  FindSalomeBoost.cmake  FindSalomeCppUnit.cmake  FindSalomeDoxygen.cmake  FindSalomeGraphviz.cmake  FindSalomeHDF5.cmake  FindSalomeLibXml2.cmake  FindSalomeMED.cmake  FindSalomeMEDCoupling.cmake  FindSalomeMEDFile.cmake  FindSalomeMPI.cmake  FindSalomeMetis.cmake  FindSalomeNumPySciPy.cmake  FindSalomeParMetis.cmake  FindSalomePython.cmake  FindSalomePythonInterp.cmake  FindSalomePythonLibs.cmake  FindSalomeSWIG.cmake  FindSalomeScotch.cmake  FindSalomeSphinx.cmake  FindSalomeXDR.cmake  FindScotch.cmake  FindSphinx.cmake  FindXDR.cmake  MEDCouplingMacros.cmake  MEDtoolMacros.cmake  SalomeMacros.cmake  SalomeSetupPlatform.cmake
doc/MEDMEM/: FIELDcreate.cxx  FIELDcreate.py  FIELDgeneral.cxx  FIELDgeneral.py  HOWTO Create A New Driver.txt  MEDMEM_Content.tex.in  MEDMEM_InvokingDriverAtObjectCreationTime.cxx  MEDMEM_InvokingDriverAtObjectCreationTime.py  MEDMEM_InvokingDriverByAttachingItToAnObject.cxx  MEDMEM_InvokingDriverByAttachingItToAnObject.py  MEDMEM_InvokingDriverFromStandardObjectMethod.cxx  MEDMEM_InvokingDriverFromStandardObjectMethod.py  MEDMEM_MedAddingAnExistingObject.cxx  MEDMEM_UML.dia  MEDMEM_UsersGuide.lyx  MEDMEM_UsersGuide.tex.in  MESHINGexample.cxx  MESHINGexample.py  MESHconnectivities.cxx  MESHconnectivities.py  MESHcoordinates.cxx  MESHcoordinates.py  MESHgeneral.cxx  MESHgeneral.py  Makefile.am  Makefile.in  TODO_Drivers.txt
doc/doxygen/: BuildPyExamplesFromCPP.py  CMakeLists.txt  Doxyfile_med_user.in  Geometric2D.dox  MED_class.dox  Makefile.am  barycoords.dox  biblio.dox  dualmesh.dox  extractor.dox  field.dox  grid.dox  interpkernel.dox  interpkernel_features.dox  interptheory.dox  interptools.dox  intersectors.dox  main.dox  medcoupling.dox  medcouplingexamples.dox  medcouplingexamples.doxy  medcouplingexamplescpponly.dox  medfilebrowser.dox  medloader.dox  medmem.dox  medpartitioner.dox  medsplitter.dox  mesh.dox  meshing.dox  polygon.dox  remapper.dox  remapping.dox  support.dox  tools.dox
doc/tutorial/: CMakeLists.txt  atestMEDCouplingCorba1.rst  atestMEDCouplingCube.rst  atestMEDCouplingDataArray1.rst  atestMEDCouplingFieldDouble1.rst  atestMEDCouplingLoaderEx1.rst  atestMEDCouplingLoaderEx2.rst  atestMEDCouplingNumPy.rst  atestMEDCouplingPoly.rst  atestMEDCouplingRead.rst  atestMEDCouplingRemapper.rst  atestMEDCouplingUMesh1.rst  atestMEDLoaderAdvancedAPI1.rst  atestMEDLoaderBasicAPI1.rst  atestMEDLoaderSplitAndMerge1.rst  conf.py.in  index.rst  medcoupling_2Dpolygon.rst  medcoupling_3Dcube.rst  medcoupling_Read.rst  medcoupling_dataarray1_en.rst  medcoupling_dataarray1_fr.rst  medcoupling_en.rst  medcoupling_fielddouble1_en.rst  medcoupling_fielddouble1_fr.rst  medcoupling_fr.rst  medcoupling_umesh1_en.rst  medcoupling_umesh1_fr.rst  medcouplingcorba_en.rst  medcouplingcorba_fr.rst  medcouplingloaderex1_en.rst  medcouplingloaderex1_fr.rst  medcouplingloaderex2_en.rst  medcouplingloaderex2_fr.rst  medcouplingmultiproc_fr.rst  medcouplingnumpy_en.rst  medcouplingnumpy_fr.rst  medcouplingremapper_en.rst  medcouplingremapper_fr.rst  medloader_SplitAndMerge1_en.rst  (+7 more)
doc/user/: CMakeLists.txt  conf.py.in  requirements_doc.txt
idl/: CMakeLists.txt
medcoupling_core/: CMakeLists.txt  CTestTestfileInstall.cmake.in
medcoupling_core/include/: MEDCoupling_version.h.in
medcoupling_core/python/: CMakeLists.txt
medcoupling_core/source/: CMakeLists.txt
medcoupling_core/test/: CMakeLists.txt
medcoupling_data/python/: CMakeLists.txt
pymedcoupling/: CMakeLists.txt  CTestTestfileInstall.cmake
resources/: BDC-714.sauv  Box1.med  Box1Moderate.med  Box2.med  Box2Moderate.med  Box3.med  BoxEvenSmaller1.med  BoxHexa1.med  BoxHexa2.med  BoxModSmall1.med  BoxModSmall2.med  BoxTetra2.med  CMakeLists.txt  ComplexIncludedTetra.med  ComplexIncludingTetra.med  CornerTetra.med  DegenEdgeXY.med  DegenFaceXYZ.med  DegenTranslatedInPlane.med  DividedGenTetra1.med  DividedGenTetra2.med  DividedUnitTetra.med  DividedUnitTetraSimpler.med  GenTetra1.med  GenTetra2.med  GeneralTetra.med  HalfstripOnly.med  HalfstripOnly2.med  LargeUnitTetra.med  Mesh3D_10_2d1.med  Mesh3D_10_2d2.med  Mesh3D_11.med  MovedHexaBox1.med  MovedHexaBox2.med  NudgedDividedUnitTetra.med  NudgedDividedUnitTetraSimpler.med  NudgedSimpler.med  NudgedTetra.med  Pol1.fig  Pol2.fig  (+39 more)
resources/dev/: mc_suppr_valgrind  my_findNodesToDup.py
src/: CMakeLists.txt  CTestTestfileInstall.cmake  CTestTestfileInstall.cmake.in  CTestTestfileInstallMEDCoupling.cmake
src/ICoCo/: CMakeLists.txt  ICoCo.hxx  ICoCoField.cpp  ICoCoField.cxx  ICoCoField.h  ICoCoField.hxx  ICoCoMEDDoubleField.cxx  ICoCoMEDDoubleField.h  ICoCoMEDDoubleField.hxx  ICoCoMEDField.cxx  ICoCoMEDField.hxx  ICoCoMEDIntField.cxx  ICoCoMEDIntField.h  ICoCoMEDIntField.hxx  ICoCo_DeclSpec.hxx  Readme.txt
src/INTERP_KERNEL/: BBTree.txx  BBTreeClosest.txx  BBTreeDiscrete.txx  BBTreeDst.txx  BBTreePts.txx  BBTreeStandAlone.txx  Barycentric3DIntersectorP1P1.hxx  Barycentric3DIntersectorP1P1.txx  BoundingBox.cxx  BoundingBox.hxx  BoxSplittingOptions.cxx  BoxSplittingOptions.hxx  CMakeLists.txt  CellModel.cxx  CellModel.hxx  ConvexIntersector.hxx  ConvexIntersector.txx  CurveIntersector.hxx  CurveIntersector.txx  CurveIntersectorInternal.cxx  CurveIntersectorInternal.hxx  CurveIntersectorP0P0.hxx  CurveIntersectorP0P0.txx  CurveIntersectorP0P1.hxx  CurveIntersectorP0P1.txx  CurveIntersectorP1P0.hxx  CurveIntersectorP1P0.txx  CurveIntersectorP1P1.hxx  CurveIntersectorP1P1.txx  CurveIntersectorP1P1PL.hxx  CurveIntersectorP1P1PL.txx  DiameterCalculator.cxx  DiameterCalculator.hxx  (+189 more)
(+2241 files in other folders)
